src/objects/HWS_Product_Serviceable_Relations__c.object
<CustomObject>
    <fields>
        <fullName>HWS_Combined_key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Combined key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HWS_EDPActiveStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDP ActiveStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_EDPDeletedAtSource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDP DeletedAtSource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_EDPLastModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EDP LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HWS_HWSSIPartNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HWS SI PartNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_HWSVIPartNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HWS VI PartNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_HWSVIPartRevisionHWSVIToICS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HWS VI PartRevision HWS VIToICS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HWS_Is_Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_PCIIdentifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCI Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_PrimaryProductCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary ProductCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_ProductCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HWS_ProductCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_SourceSystem__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Serviceable Relations</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HWS_EDPActiveStatus__c</columns>
        <columns>HWS_EDPLastModifiedDate__c</columns>
        <columns>HWS_HWSVIPartNumber__c</columns>
        <columns>HWS_EDPDeletedAtSource__c</columns>
        <columns>HWS_HWSSIPartNumber__c</columns>
        <columns>HWS_ProductCode__c</columns>
        <columns>HWS_HWSVIPartRevisionHWSVIToICS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PSR-{00000000}</displayFormat>
        <label>Product Serviceable Relations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Serviceable Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>